--- a/css/nav.css
+++ b/css/nav.css
@@ -3,9 +3,8 @@
     display:block;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-align:center; /*Specify the alignment of the whole UL if UL is not width:100%;*/
-    letter-spacing:normal;
+    letter-spacing:normal;    
 }
-
 #navmenu ul
 { 
     margin:0 auto;
@@ -18,13 +17,10 @@
     list-style:none;
     position:relative;
     z-index:999999990; 
-    box-shadow:0 0 8px rgba(0,0,0,.28),0 8px 16px rgba(0,0,0,.56);
-
-background:#1f1f1f;/*#075a78 url(../images/jq-global-nav.png) 50% 50% repeat-x;/*rgba(14, 178, 240,0.9);*/
-border-top:2px solid #0eb2f0;
+    /*box-shadow:0 0 8px rgba(0,0,0,.28),0 8px 16px rgba(0,0,0,.56);*/
+background:rgba(31,31,31,0.5);
 border-radius:0 0 4px 4px;
 }
-
 #navmenu li
 {
     margin:0;
@@ -38,26 +34,24 @@ border-radius:0 0 4px 4px;
     line-height:66px; /*This determines the height of the menu*/
     transition:background-color 0.2s;
     outline:none;
+    box-shadow:0 0 8px rgba(0,0,0,.28),0 8px 16px rgba(0,0,0,.56);
     -moz-user-select:none;
     -webkit-user-select: none;
-    -ms-user-select: none;
+    -ms-user-select: none;    
 }
-
 #navmenu .full-width {
-    position: static;
+    position: static;    
 }
-
-#navmenu .over
+#navmenu li:hover, #navmenu.over
 {
     border-bottom:2px solid #0eb2f0;
+    border-top:2px solid #0eb2f0;
     color:#0eb2f0;
 background:transparent;
 }
-
-#navmenu .over.no-sub {
+#navmenu .over.no-sub {   
     
 }
-
 #navmenu .top-heading
 {
     font-weight:bold;
@@ -67,24 +61,21 @@ background:transparent;
     text-decoration:none;
     display:inline-block; 
     outline:0;
-    cursor:pointer;
+    cursor:pointer;    
 }
-
 /* links of top-heading */
 #navmenu a, #navmenu a:link, #navmenu a:hover
 {
-    color:inherit;
+    color:inherit;    
 }
 #navmenu a:hover
 {
-    text-decoration:none;
+    text-decoration:none;    
 }
-
 #navmenu a:focus
 {
-    outline:1px dotted #09F;
-}
-    
+    outline:1px dotted #09F;    
+}    
 /* caret(arrow icon) */
 #navmenu .caret
 {  
@@ -100,8 +91,8 @@ background:transparent;
     border-left: 4px solid transparent;
     display: inline-block;
     position:relative;
-}  
-        
+    z-index: 1010;    
+}          
 /* sub-menu layout
 ----------------------------*/
 
@@ -115,31 +106,28 @@ background:transparent;
     border:1px solid rgba(255,255,255,0.35);
 border-top:none;
 border-radius:2px;
-background-color:rgba(0,0,0,0.1);
+background-color:rgba(0,0,0,0.5);
 background-color:#ccc \9;/*fallback for old IE*/
+z-index: 1010;
 }
-
 #navmenu .full-width .dropdown {
     width:100%;
     padding:0;
     margin:0;
     margin-left:-1px; /*Set to 0 if UL has no border*/
+    z-index: 1010;    
 }
-
 #navmenu .offset300 {
-    left:-300px;right:auto;
+    left:-300px;right:auto;    
 }
-
 #navmenu .right-aligned {
     left:auto;
-    right:0px;
+    right:0px;    
 }
-
 #navmenu .over .dropdown
 {
-    display:block;
+    display:block;    
 }
-
 #navmenu .dd-inner {
     text-align:center;
     padding:20px;
@@ -148,8 +136,8 @@ background-color:#ccc \9;/*fallback for old IE*/
     white-space:nowrap;
     font-size:13px;
     line-height:1.35;
-}
-  
+    z-index: 1010;    
+}  
 /* links in sub menu
 ----------------------------*/
 
@@ -160,15 +148,13 @@ background-color:#ccc \9;/*fallback for old IE*/
     color:#000;
     line-height:22px;
     text-decoration:none;
-    padding:0;
+    padding:0;    
 }
-
 #navmenu .dropdown a:hover, #navmenu .dropdown a:focus
 {
     text-decoration:underline;
-    color:#09F;
+    color:#09F;    
 }
-
 /* blocks within the sub-menu
 -----------------------------*/
 #navmenu .column
@@ -182,22 +168,19 @@ background-color:#ccc \9;/*fallback for old IE*/
 padding:0 30px;
 border-right:1px solid #999;
 }
-
 #navmenu div.dd-inner div:last-child
 {
-    border-right:none;
+    border-right:none;    
 }
-
 #navmenu .column h3 {
   font-weight: 500;
   line-height: 1.1;
   margin-top: 12px;
   margin-bottom: 8px;
-  font-size: 24px;
+  font-size: 24px;  
 }
-
 #navmenu div.column h3 {text-transform:uppercase;}
-#navmenu div.column260 {width:260px;}
+#navmenu div.column260 {width:200px;}
 #navmenu div.column340 {width:340px;}
 
 /* useful when http://www.menucool.com/navmenu/one-menu-for-all-pages */
@@ -209,36 +192,30 @@ border-right:1px solid #999;
 {
     display:none; /* hide menu icon initially */
 }
-
-
-
 /*styles for mobile*/
 @media only screen and (max-width: 680px) 
 {
     #navmenu .column.mayHide {
         display:none;
     }
-
     /*override the original settings*/
     #navmenu ul {
         width: 100%; 
         display: none;
         border-radius:0;
-        background:rgba(0,153,255,0.6499999999999999); 
-    }
-    
+        background:#1f1f1f;/*rgba(0,153,255,0.6499999999999999); */
+    }    
     #navmenu li {
         position:relative;
         display:block;
-        font-size:20px;
+        font-size:19px;
+        line-height:46px;
         text-align:left;
-        border-bottom: 1px solid rgba(0,0,0,0.2);
+        border-bottom:1px solid #333;
     }
-
     #navmenu .full-width {
         position: relative;
-    }
-    
+    }    
     #navmenu .dropdown {
         position:relative;
         *top:auto;/*for IE7*/
@@ -247,23 +224,19 @@ border-right:1px solid #999;
         box-shadow:none;
         text-align:left;
         background-color:#FFF;
-    }
-    
+    }    
     #navmenu .offset300 {
         left:0;
     }
-
     #navmenu .full-width .dropdown {
         width: auto;
-    }
-        
+    }        
     #navmenu .dd-inner
     {
         margin:0;
         background:none;
         text-align:left;
-    }
-    
+    }    
     /*turn each column to list vertically instead of horizontally */
     #navmenu .column {
         width:auto;
@@ -271,7 +244,6 @@ border-right:1px solid #999;
         border:none;
         display:block;
     }
-
     /*move the arrow icon to right*/
     #navmenu .caret {
         position:absolute;
@@ -280,8 +252,6 @@ border-right:1px solid #999;
         top:20px;
         border-width:5px;
     }
-
-
     /* All the following are for the .menu-icon (pure CSS) */
     #navmenu .menu-icon {
         font-size:32px;/*icon size*/
@@ -301,7 +271,6 @@ border-right:1px solid #999;
         margin-left: auto;
         margin-right: 11px;
     }
-
     #navmenu .menu-icon::before {
         content: "";
         position: absolute;
@@ -313,11 +282,9 @@ border-right:1px solid #999;
         border-bottom: 0.125em solid #333;
         box-sizing: content-box;
     }
-
     #navmenu .menu-icon-active {
         background-color: #333;
     }
-
     #navmenu .menu-icon-active::before {
         border-color: #eee;
     }
